--- a/final_report.bib
+++ b/final_report.bib
@@ -173,7 +173,7 @@
   publisher={Elsevier}
 }
 
-@MISC{behrens2015,
+@MISC{wilson2015tradeoff,
   author = {Wilson, Robert C and Cohen, Jonathan D},
   title = {Humans tradeoff information seeking and randomness in explore-exploit decisions},
   year = {2015},
