--- a/final_report.bib
+++ b/final_report.bib
@@ -177,5 +177,5 @@
   author = {Wilson, Robert C and Cohen, Jonathan D},
   title = {Humans tradeoff information seeking and randomness in explore-exploit decisions},
   year = {2015},
-  note = {Poster presented at Reinforcement Learning & Decision Making, June 7--10, Edmonton, Canada}
+  note = {Poster presented at Reinforcement Learning \& Decision Making, June 7--10, Edmonton, Canada}
 }
