--- a/final_report.tex
+++ b/final_report.tex
@@ -6,6 +6,7 @@
 \usepackage[margin=1in]{geometry}
 \usepackage{cite}
 \usepackage{subcaption}
+\usepackage{hyperref}
 
 \setlength{\droptitle}{-5em} 
 
@@ -26,6 +27,13 @@
 \begin{document}
 
 \maketitle
+
+\begin{center}
+\href{https://github.com/dylandaniels/rl-maze}{\texttt{https://github.com/dylandaniels/rl-maze}} \\
+
+
+\href{https://www.youtube.com/watch?v=h0fANDBVJrQ}{\texttt{https://www.youtube.com/watch?v=h0fANDBVJrQ}}
+\end{center}
 
 \section*{Introduction}
 
